--- a/gallery-grid.css
+++ b/gallery-grid.css
@@ -8,9 +8,11 @@ body {
 .container.gallery-container {
     background-color: #fff;
     color: #35373a;
-    min-height: 100vh;
+    min-height: 40em;
     border-radius: 20px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+    width: 75%;
+    margin: auto;
 }
 
 .gallery-container h1 {
@@ -60,6 +62,18 @@ body {
 .second {
     order: 2;
     margin-left: 3%;
+}
+/*flex container for form*/
+.upload_form{
+    width: 75%;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex; /* or inline-flex */
+    flex-direction: row;
+    justify-content: center;
+}
+.form_input{
+    margin: 1em 1em 1em 1em;
 }
 /*cs to format button on main page */
 .btn {
